k8s-manifests/generated/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    name: hello-world
    environment: production
